--- a/src/pages/IntersectionObserverDemo/components/LazyComponent.css
+++ b/src/pages/IntersectionObserverDemo/components/LazyComponent.css
@@ -1,7 +1,7 @@
 .lazy-component {
   opacity: 0;
   transform: translateY(20px); /* 初始时稍微向下偏移 */
-  transition: opacity 2s ease-out, transform 2s ease-out; /* 添加过渡效果 */
+  transition: opacity 2s ease-out, transform 2s ease-out;
 }
 
 .lazy-component.visible {
@@ -14,6 +14,29 @@
   height: auto;
   display: block;
   margin-bottom: 10px;
+  transform: scale(0.3); /* 初始缩放比例 */
+  opacity: 0; /* 初始透明度 */
+  transition: transform 3s ease-in-out, opacity 3s ease-in-out;
+  animation: scaleAndFadeIn 3s ease-in-out forwards;
+}
+
+.lazy-component.visible img {
+  animation-play-state: running; /* 开始动画 */
+}
+
+@keyframes scaleAndFadeIn {
+  0% {
+    transform: scale(0.3); /* 初始大小为30% */
+    opacity: 0; /* 初始透明度为0 */
+  }
+  50% {
+    transform: scale(1.5); /* 中间大小为150% */
+    opacity: 1; /* 中间透明度为1 */
+  }
+  100% {
+    transform: scale(1); /* 最终大小为100% */
+    opacity: 1; /* 最终透明度为1 */
+  }
 }
 
 .lazy-component p {
