--- a/src/pages/Handsontable/TableStyles.css
+++ b/src/pages/Handsontable/TableStyles.css
@@ -1,21 +1,16 @@
 
 
-/* .htCore th {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 75px;
-  vertical-align: middle;
-} */
+.hand-content {
+  height: 90vh;
+  width: 100%;
+}
 
-/* 去掉第一个 tr 的第二和第三个 th 元素的下边框 */
-.htCore thead tr:first-child th:nth-child(2),
-.htCore thead tr:first-child th:nth-child(3) {
+.htCore thead tr:first-child th:nth-child(1),
+.htCore thead tr:first-child th:nth-child(2) {
   border-bottom: none;
 }
 
-/* 去掉第二个 tr 的第二和第三个 th 元素的下边框 */
-.htCore thead tr:nth-child(2) th:nth-child(2),
-.htCore thead tr:nth-child(2) th:nth-child(3) {
+.htCore thead tr:nth-child(2) th:nth-child(1),
+.htCore thead tr:nth-child(2) th:nth-child(2) {
   border-bottom: none;
 }
