--- a/src/pages/WarningIndex/index.scss
+++ b/src/pages/WarningIndex/index.scss
@@ -5,7 +5,7 @@
   .detail {
     display: flex;
     justify-content: end;
-    color: rgba($color: #fff, $alpha: 0.6);
+    color: #1890ff;
     font-size: 12px;
     cursor: pointer;
   }
